add parameter generator
