# public/openapi.json
@@ -1699,6 +1699,45 @@
         }
       }
     },
+    "/comfyuis/workflows/{id}/generate-parameters": {
+      "post": {
+        "operationId": "post-comfyuis-workflows-{id}-generate-parameters",
+        "summary": "",
+        "description": "",
+        "tags": [
+          "Comfyuis"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "example": "123",
+            "description": "Path parameter: id"
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/any"
+              }
+            }
+          }
+        },
+        "responses": {
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
     "/comfyuis/models/{id}/entries/{entryType}": {
       "get": {
         "operationId": "get-comfyuis-models-{id}-entries-{entryType}",
@@ -4272,6 +4311,45 @@
               }
             }
           },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/stories/{id}/images": {
+      "post": {
+        "operationId": "post-stories-{id}-images",
+        "summary": "更新条目",
+        "description": "",
+        "tags": [
+          "Stories"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "example": "123",
+            "description": "Path parameter: id"
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/any"
+              }
+            }
+          }
+        },
+        "responses": {
           "400": {
             "$ref": "#/components/responses/400"
           },
